slight adjustment to Results card to avoid title spill out

--- a/client/src/components/LoadingModal/LoadSpinner.css
+++ b/client/src/components/LoadingModal/LoadSpinner.css
@@ -3,6 +3,3 @@
     text-align: center;
 }
 
-.LoadSpinner__Content{
-
-}
